# hdc-bin-collection

./: .gitignore  README.md  pyproject.toml
.github/workflows/: create-release.yaml  pack-and-publish.yaml
hdc_bin_collection/: ca_data.py  hdc_bin_collection.py
