[tool.poetry]
name = "hdc-bin-collection"
version = "0.0.1"
description = "A module that finds the next bin collection dates for a specific address in Market Harborough, UK. Uses the UPRN to find the address."
authors = ["Aaron Carson <aaron@aaroncarson.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.pyright]
reportOptionalMemberAccess = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
