[tool.poetry]
name = "hdc_bin_collection"
version = "1.0.1"
description = "An async module that finds the next bin collection dates for a specific address in Market Harborough, UK. Uses the UPRN to find the address."
authors = ["Aaron Carson <aaron@aaroncarson.co.uk>"]
keywords = ["hdc", "bin", "collection", "Market Harborough", "Harborough", "LE16", "garbage", "trash", "rubbish", "recycling"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/caraar12345/hdc-bin-collection"
include = ["LICENSE"]
packages = [
  { include = "hdc_bin_collection/*.py" }
]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.0"
requests = "^2.27.1"
aiohttp = "^3.8.1"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
black = "^26.0"

[tool.pyright]
reportOptionalMemberAccess = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
